# openai-functions

./: README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
chat_fn_gen/: runner.py
chat_fn_gen/parsers/: abc.py  dataclass_parser.py  default.py  dict_parser.py
docs/: api.rst  conf.py  conversation.md  index.rst  introduction.md  nlp_interface.md  skills.md
openai_functions/: __init__.py  conversation.py  exceptions.py  function_wrapper.py  json_type.py  nlp.py  openai_types.py  runner.py
openai_functions/functions/: __init__.py  basic_set.py  exceptions.py  functions.py  sets.py  togglable_set.py  union.py  wrapper.py
openai_functions/parsers/: __init__.py  abc.py  atomic_type_parser.py  bool_parser.py  dataclass_parser.py  default.py  dict_parser.py  enum_parser.py  float_parser.py  int_parser.py  list_parser.py  none_parser.py  str_parser.py  union_parser.py
tests/: test_basic_set.py  test_conversation.py  test_function_wrapper.py  test_runner.py  test_skills.py
