[tool.poetry]
name = "openai-functions"
version = "1.0.0"
description = "Simplifies the usage of OpenAI ChatGPT's function calling by generating the schemas and parsing OpenAI's responses for you."
authors = ["rizerphe <44440399+rizerphe@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/rizerphe/openai-functions"
documentation = "https://openai-functions.readthedocs.io/"
keywords = ["nlp", "openai", "openai-api", "chatgpt", "chatgpt-api", "wrapper", "functions", "chatgpt-api", "openai-functions", "chatgpt-functions", "typing", "docstring", "docstrings", "decorators", "signatures", "parsing"]
license = "MIT"
packages = [{include = "openai_functions"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.8"
docstring-parser = "^0.15"
typing-extensions = "^4.6.3"


[tool.poetry.group.dev.dependencies]
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.3"}
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
